# SPZC_IDS_Random_Forest_SHAP

./: .gitignore  Justfile  README.md  pyproject.toml
data_raw/: README.md
data_raw/CIC_IDS2017/: README.md
data_raw/CSE_CIC_IDS2018/: README.md
data_samples/: first_five.txt
queries/: first_five.sql
scripts/: 01_preprocess_cicids2017_binary.py  02_train_random_forest_binary.py  04_evaluate_binary_model.py  05_analyze_shap_binary.py  README.md  analyze_feature_importance.py  analyze_feature_importance_port_80_only.py  analyze_feature_importance_without_all_packet.py  analyze_permutation_importance.py  analyze_permutation_importance_in_groups.py  analyze_shap_baseline.py  analyze_shap_without_all_packet.py  binary_pipeline_common.py  check_AUC_for_each_class.py  check_destination_port_only_importance.py  check_inf_and_missing_data.py  check_train_test_duplicates.py  preprocess_data.py  preprocess_data_bruteforce.py  preprocess_data_controlled.py  preprocess_data_full_dataset.py  preprocess_data_generalization_test.py  preprocess_data_paper_baseline.py  preprocess_data_portscan.py  preprocess_data_web_attacks.py  random_forest_port_80_only.py  random_forest_without_all_packet_metrics.py  random_forest_without_packet_length_metrics.py  show_standard_scaler_joblib.py  summarize_variant_results.py  train_and_evaluate_generalization.py  train_random_forest.py  train_random_forest_bruteforce.py  train_random_forest_controlled.py  train_random_forest_portscan.py  train_random_forest_web_attacks.py  variant_paths.py
scripts/main/: 05_analyze_shap_binary.py  (+3 more)
(+17 files in other folders)
