[project]
name = "spzc-ids-random-forest-shap"
version = "0.1.0"
description = "Intrusion detection using Random Forest and SHAP on CICIDS2017"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.5.2",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy",
    "pandas",
    "ruff>=0.15.15",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = []

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".venv",
    "data_raw",
    "data_processed",
    "models",
]